major changes in styles, new ui elements, imporvements in logic, logo to svg

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,3 +25,19 @@ a {
     @apply dark:bg-[#0f172a] bg-slate-200;
   }
 }
+
+/* buttons animation */
+/* span.ripple {
+  position: absolute;
+  border-radius: 50%;
+  transform: scale(0);
+  animation: ripple 600ms linear;
+  background-color: rgba(255, 255, 255, 0.7);
+} */
+
+/* @keyframes ripple {
+  to {
+    transform: scale(4);
+    opacity: 0;
+  }
+} */
